# alf-light-tracking

./: .gitignore  AGENTS.md  AGENTS_root.md  CMakeLists.txt  CODE_STYLE_PL.md  DEPLOYMENT.md  README.md  README_SCENARIO_PACKAGE.txt  REPO_LAYOUT.txt  RUNBOOK.md  TODO.md  index.html  install_git_hooks.sh  mypy.ini  package.xml  pytest.ini  requirements-ros-python.txt  requirements.txt  setup.py
robot_mission_control/: README.md  package.xml  pyproject.toml
robot_mission_control/config/: default.yaml
robot_mission_control/launch/: mission_control.launch.py
robot_mission_control/robot_mission_control/: __main__.py  app.py  version.py  versioning.py
robot_mission_control/robot_mission_control/app/: __init__.py  bootstrap.py  entrypoint.py
robot_mission_control/robot_mission_control/core/: __init__.py  config_loader.py  error_boundary.py  health_monitor.py  logger.py  state_store.py  supervisor.py
robot_mission_control/robot_mission_control/docs/: README.md
robot_mission_control/robot_mission_control/ros/: dependency_audit_client.py  node_manager.py  service_clients.py  topic_subscribers.py
robot_mission_control/robot_mission_control/rosbag/: __init__.py  bag_indexer.py  bag_inspector.py  integrity_checker.py  playback_controller.py
robot_mission_control/robot_mission_control/ui/: __init__.py  main_window.py
robot_mission_control/robot_mission_control/ui/tabs/: __init__.py  controls_tab.py  rosbag_tab.py  telemetry_tab.py
robot_mission_control/scripts/: generate_version.py
ros2_ws/g1_light_tracking/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_ws/g1_light_tracking/config/: bridge.yaml  control.yaml  perception.yaml  perception_calibration_report.md
ros2_ws/g1_light_tracking/g1_light_tracking/: arm_skill_bridge_node.py  arm_skill_controller.py  csv_detection_replay_node.py  d435i_node.py  g1_light_follower_node.py  light_spot_detector_node.py  turtlesim_cmd_vel_bridge_node.py  unitree_cmd_vel_bridge_node.py
ros2_ws/g1_light_tracking/g1_light_tracking/tools/: __init__.py  calibrate_perception.py
ros2_ws/g1_light_tracking/g1_light_tracking/vision/: __init__.py  detection_types.py  detector_interfaces.py  detector_registry.py  detectors.py  types.py
ros2_ws/g1_light_tracking/launch/: light_tracking_stack.launch.py  light_tracking_turtlesim.launch.py
ros2_ws/g1_light_tracking/tools/: calibrate_perception.py
ros2_ws/robot_emergency_stop/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/robot_emergency_stop/config/: emergency_stop.yaml
ros2_ws/robot_emergency_stop/launch/: emergency_stop_standalone.launch.py
ros2_ws/robot_emergency_stop/resource/: robot_emergency_stop
ros2_ws/robot_emergency_stop/robot_emergency_stop/: __init__.py  emergency_stop_node.py
ros2_ws/robot_mission_control/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  COMMIT_LOG.md  DEPLOYMENT_PLAN.md  README.md  TASKS.md  TODO.md  package.xml  pyproject.toml  requirements-core.txt  requirements-ui.txt  requirements.txt  setup.cfg  setup.py
ros2_ws/robot_mission_control/action/: MissionStep.action
ros2_ws/robot_mission_control/config/: action_backend.yaml  default.yaml
ros2_ws/robot_mission_control/launch/: mission_control.launch.py
ros2_ws/robot_mission_control/resource/: robot_mission_control
ros2_ws/robot_mission_control/robot_mission_control/: __init__.py  app.py  versioning.py
ros2_ws/robot_mission_control/robot_mission_control/app/: bootstrap.py
ros2_ws/robot_mission_control/robot_mission_control/config/: dependency_catalog.yaml
ros2_ws/robot_mission_control/robot_mission_control/core/: __init__.py  action_status.py  config_loader.py  error_codes.py  event_bus.py  health_monitor.py  models.py  state_store.py
ros2_ws/robot_mission_control/robot_mission_control/docs/: README.md
ros2_ws/robot_mission_control/robot_mission_control/e2e/: __init__.py  mission_step_action_test_server.py
ros2_ws/robot_mission_control/robot_mission_control/plugins/: __init__.py
ros2_ws/robot_mission_control/robot_mission_control/ros/: __init__.py  action_backend.py  action_clients.py  dependency_audit_client.py  node_manager.py  service_clients.py  topic_subscribers.py
ros2_ws/robot_mission_control/robot_mission_control/rosbag/: record_controller.py  storage_policy.py
ros2_ws/robot_mission_control/robot_mission_control/ui/: main_window.py  operator_alerts.py
ros2_ws/robot_mission_control/scripts/: mission_step_action_test_server  robot_mission_control  run_e2e_real_flow.sh
ros2_ws/robot_mission_control/tests/: conftest.py  test_action_backend.py  test_action_contract_runtime_alignment.py  test_action_e2e_launch_testing.py  test_config_loader.py  test_map_tab.py  test_map_topic_subscribers.py  test_operator_alerts.py  test_operator_guidance.py  test_ros2_package_manifests.py  test_ui_state_safety.py
ros2_ws/robot_mission_control_interfaces/: CMakeLists.txt  package.xml
ros2_ws/robot_mission_control_interfaces/action/: MissionStep.action
ros2_ws/src/g1_light_tracking/: AGENTS_g1_light_tracking.md  BUILD_FIX_REPORT.txt  CMakeLists.txt  CONSISTENCY_AUDIT_REPORT.txt  EXECUTABLE_AUDIT_REPORT.txt  MSG_ALIGNMENT_REPORT.txt  README.md  package.xml  requirements-compat.txt  requirements-ros-python.txt  requirements-standalone.txt  setup.cfg  setup.py
ros2_ws/src/g1_light_tracking/calibration/: calibrate_from_folder.py  calibrate_from_folder_README.txt  camera_intrinsics.yaml
ros2_ws/src/g1_light_tracking/config/: association.yaml  camera_calibration.yaml  control.yaml  debug.yaml  depth_mapper.yaml  head_display.yaml  head_display_state.yaml  legacy_adapter.yaml  mission.yaml  mission_scenario_default.yaml  mission_scenarios.yaml  perception.yaml  rosbag_recorder.yaml  safety.yaml  topdown_odom.yaml  tracking.yaml  visual_slam.yaml
ros2_ws/src/g1_light_tracking/docs/: architecture.md  head_display_operator.md  index.html  index_developer.html  scenario_module_upgrade_README.txt  xyz_coordinate_interpretation.md
ros2_ws/src/g1_light_tracking/g1_light_tracking/: d435i_node.py  (+9 more)
ros2_ws/src/g1_light_tracking/g1_light_tracking.egg-info/: PKG-INFO  SOURCES.txt
(+197 files in other folders)
