<?xml version="1.0"?>
<package format="3">
  <name>g1_light_tracking</name>
  <version>0.4.5</version>
  <description>ROS 2 ament_python package for MVP intralogistics perception with OpenCV, YOLOv8n, QR, AprilTag hooks, parcel localization, and light-guided zones.</description>
  <maintainer email="matpomianek@gmail.com">Mateusz Pomianek</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>rosidl_default_runtime</depend>

  <test_depend>ament_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
