<?xml version="1.0"?>
<!-- [AI-CHANGE | 2026-04-21 09:30 UTC | v0.166] -->
<!-- CO ZMIENIONO: Dodano manifest ROS2 package.xml dla uruchamiania przez narzędzia ROS. -->
<!-- DLACZEGO: Backlog wymaga kompatybilności pakietu z ekosystemem colcon/ros2 launch. -->
<!-- JAK TO DZIAŁA: Manifest deklaruje metadane pakietu i podstawowe zależności wykonaniowe. -->
<!-- TODO: Uzupełnić zależności o konkretne interfejsy ROS po ustaleniu finalnego kontraktu node'a. -->
<package format="3">
  <name>robot_mission_control</name>
  <version>0.1.0</version>
  <description>Desktop mission control app for robot operations.</description>
  <maintainer email="team@example.com">Mission Control Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
