# [AI-CHANGE | 2026-04-20 20:05 UTC | v0.151]
# CO ZMIENIONO: Dodano zależność PyYAML i pakowanie plików YAML konfiguracyjnych aplikacji.
# DLACZEGO: Klient dependency_status czyta listę bibliotek z pliku konfiguracyjnego po stronie robota.
# JAK TO DZIAŁA: `PyYAML` obsługuje parser, a `package-data` dołącza katalog `config/*.yaml` do artefaktów.
# TODO: Dodać osobny extras `dev` z narzędziami lint/test i pinowaniem wersji reproducible-build.
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-mission-control"
version = "0.1.0"
description = "Desktop mission control app (PySide6 + ROS2 bridge)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "PyYAML>=6.0",
]

[project.scripts]
robot-mission-control = "robot_mission_control.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_mission_control*"]

[tool.setuptools.package-data]
robot_mission_control = ["config/*.yaml"]
