<?xml version="1.0"?>
<package format="3">
  <name>g1_light_tracking</name>
  <version>0.1.0</version>
  <description>Single-package ROS2 stack for Unitree G1 light tracking using JSON messages.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>unitree_api</depend>
  <depend>unitree_hg</depend>
  <exec_depend>turtlesim</exec_depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
