<?xml version="1.0"?>
<!-- [AI-CHANGE | 2026-04-21 18:06 UTC | v0.179] -->
<!-- CO ZMIENIONO: Dodano zależności runtime dla finalnego kontraktu ROS2 Action (`robot_mission_control_interfaces`) -->
<!--               oraz pakietu statusów akcji (`action_msgs`). -->
<!-- DLACZEGO: Backend Action importuje typ `MissionStep` z pakietu interfejsów i mapuje statusy transportowe -->
<!--           zgodnie z kontraktem ROS action; brak tych zależności grozi błędem importu w runtime. -->
<!-- JAK TO DZIAŁA: `exec_depend` wymusza obecność pakietów interfejsów i wiadomości akcji w środowisku docelowym. -->
<!-- TODO: Rozszerzyć manifest o test_depend uruchamiający kontrolę importu `MissionStep` podczas CI. -->
<package format="3">
  <name>robot_mission_control</name>
  <version>0.1.0</version>
  <description>Desktop mission control app for robot operations.</description>
  <maintainer email="team@example.com">Mission Control Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>robot_mission_control_interfaces</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyside6</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
