<?xml version="1.0" encoding="UTF-8"?>
<!-- [AI-CHANGE | 2026-04-30 10:10 UTC | v0.204] -->
<!-- CO ZMIENIONO: Ustawiono jawne kodowanie UTF-8 w deklaracji XML i doprecyzowano techniczny komentarz walidacyjny bez znaków ryzykownych dla parsera. -->
<!-- DLACZEGO: W CI pojawil sie blad "not well-formed (invalid token)", wiec jawna deklaracja kodowania zmniejsza ryzyko blednej interpretacji znakow specjalnych. -->
<!-- JAK TO DZIALA: Parser XML otrzymuje jednoznaczna deklaracje kodowania, dzieki czemu manifest package.xml jest deterministycznie interpretowany. -->
<!-- TODO: Dodac krok CI: xmllint (noout) ros2_ws/robot_mission_control/package.xml przed colcon build. -->
<!-- [AI-CHANGE | 2026-04-29 13:51 UTC | v0.333] -->
<!-- CO ZMIENIONO: Poprawiono komentarz manifestu ROS2 tak, aby był zgodny z regułami XML. -->
<!-- DLACZEGO: XML nie dopuszcza sekwencji podwójnego myślnika wewnątrz komentarza, a opis komendy colcon łamał parsowanie package.xml. -->
<!-- JAK TO DZIAŁA: Manifest nadal deklaruje build ament_cmake i lokalne generowanie Action, ale bez niedozwolonych tokenów komentarza. -->
<!-- TODO: Dodać job CI wykonujący colcon build dla pakietu robot_mission_control po czystym usunięciu install/build/log. -->
<package format="3">
  <name>robot_mission_control</name>
  <version>0.1.0</version>
  <description>Desktop mission control app for robot operations.</description>
  <maintainer email="team@example.com">Mission Control Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-pyside6</exec_depend>
  <!-- [AI-CHANGE | 2026-04-27 06:40 UTC | v0.202] -->
  <!-- CO ZMIENIONO: Dodano zależności testowe `launch_testing` i `launch_testing_ros` dla E2E Action na realnym runtime ROS2. -->
  <!-- DLACZEGO: Test `launch_testing` wymaga pakietów orkiestrujących procesy launch i asercje runtime, -->
  <!--           aby zastąpić dotychczasowe podejście oparte o skrypty/logi i mocki klienta. -->
  <!-- JAK TO DZIAŁA: `test_depend` zapewnia dostęp do infrastruktury testowej podczas uruchamiania `colcon test` -->
  <!--                i pozwala wykonywać scenariusze accept/feedback/result/cancel/reject z prawdziwym ActionServer. -->
  <!-- TODO: Dodać `test_depend` dla eksportu raportu JUnit z dedykowanym parserem logów diagnostycznych Action. -->
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>python3-pytest</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
