# [AI-CHANGE | 2026-04-28 07:54 UTC | v0.200]
# CO ZMIENIONO: Usunięto sekcje PEP 621 (`[project]`, `[project.optional-dependencies]`, `[project.scripts]`) oraz konfigurację `tool.setuptools.*`, pozostawiając wyłącznie backend budowania.
# DLACZEGO: Chcemy, aby źródłem metadanych był wyłącznie `setup.py`, co eliminuje generowanie `SpecifierSet(...)` w metadanych zwracanych przez `setup.py --dry-run`.
# JAK TO DZIAŁA: `pip`/`build` nadal używają `setuptools.build_meta` z minimalnym `build-system`, a komplet metadanych pakietu jest pobierany z `setup.py`.
# TODO: Dodać test CI sprawdzający, że `python setup.py --dry-run` nie zwraca już wpisów `SpecifierSet(...)` w wygenerowanych metadanych.
[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
