<?xml version="1.0"?>
<!-- [AI-CHANGE | 2026-04-24 23:18 UTC | v0.202] -->
<!-- CO ZMIENIONO: Dodano nowy pakiet interfejsów ROS2 `robot_mission_control_interfaces` -->
<!--               z deklaracją generowania kontraktu Action `MissionStep`. -->
<!-- DLACZEGO: Runtime klienta Action i konfiguracja `action_backend.yaml` odwołują się do -->
<!--           `robot_mission_control_interfaces.action.MissionStep`; bez tego pakietu -->
<!--           kontrakt nie jest domknięty i może dojść do rozjazdu backend-UI-typ. -->
<!-- JAK TO DZIAŁA: `rosidl_default_generators` buduje artefakty Action, a `ament_export_dependencies` -->
<!--                zapewnia dostępność runtime dla konsumentów typu akcji w innych pakietach. -->
<!-- TODO: Dodać `test_depend` dla sprawdzenia importu `MissionStep` po `colcon test` w CI. -->
<package format="3">
  <name>robot_mission_control_interfaces</name>
  <version>0.1.0</version>
  <description>Interfejsy ROS2 (Action) dla kontraktu Mission Control.</description>
  <maintainer email="team@example.com">Mission Control Team</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
